Also send department lotery to telegram

--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 AUTHORIZATION=PLACEHOLDER
 DATABASE_URI='postgresql://hvs@localhost/hvs'
 API_URL='http://localhost:5000/api/request/'
+TELEGRAM_KEY=PLACEHOLDER
